[skip] Fixed clipped Nanoconf views (6m)

--- a/app/assets/stylesheets/application/presentations.scss
+++ b/app/assets/stylesheets/application/presentations.scss
@@ -38,8 +38,6 @@
 
 
 #nanoconf-form {
-  margin-top: -100px;
-
   input#presentation_title {
     width: 500px;
   }
@@ -73,7 +71,6 @@
 }
 
 .nanoconf-info {
-  margin-top: -50px;
   margin-left: 30px;
 
   .light-text {
